# Agentic-Resume-and-Cover-Letter-Generator

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION.md  Improvement.md  Makefile  README.md  README_zh.md  ROADMAP.md  SUGGESTIONS.md  commitlint.config.js  docker-compose.yml  install.bat  start.bat
.github/: dependabot.yml
backend/: .env.example  Dockerfile  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
backend/agents/: __init__.py  company_researcher.py  cover_letter_writer.py  finalize.py  graph.py  jd_analyzer.py  quality_gate.py  relevance_matcher.py  resume_writer.py  schemas.py  state.py
backend/alembic/: env.py
backend/api/: __init__.py  routes.py  websocket.py
backend/db/: __init__.py  base.py  models.py  session.py
backend/evaluation/: __init__.py  ats_scorer.py  feedback_generator.py  llm_judge.py  metrics.py  skills_taxonomy.py
backend/middleware/: auth.py  rate_limit.py
backend/models/: __init__.py  task.py
backend/prompts/: Application_question_prompt.txt  Application_question_prompt_no_fabrication.txt  Application_question_prompt_no_fabrication_zh.txt  Application_question_prompt_zh.txt  Cover_letter_prompt.txt  Cover_letter_prompt_no_fabrication.txt  Cover_letter_prompt_no_fabrication_zh.txt  Cover_letter_prompt_zh.txt  Resume_format_no_summary.txt  Resume_format_no_summary_zh.txt  Resume_format_prompts.txt  Resume_format_prompts_zh.txt  Resume_prompts.txt  Resume_prompts_no_fabrication.txt  Resume_prompts_no_fabrication_zh.txt  Resume_prompts_zh.txt  User_information_prompts.txt.example  User_information_prompts_zh.txt.example
backend/rag/: __init__.py  chunker.py  embeddings.py  retriever.py  scraper.py  tools.py  vector_store.py
backend/services/: __init__.py  ai_client_base.py  claude_client.py  claude_proxy_client.py  deepseek_client.py  gemini_client.py  langgraph_executor.py  latex_compiler.py  latex_link_checker.py  latex_utils.py  openai_compat_client.py  pdf_extractor.py  pdf_page_counter.py  prompt_manager.py  provider_registry.py  qwen_client.py  resume_validator.py  settings_manager.py  task_manager.py  text_to_pdf.py
backend/templates/: classic.txt  minimal.txt  modern.txt
backend/tests/: conftest.py  test_api_questions.py  test_models.py  test_pdf_inline.py  test_prompt_manager.py  test_task_manager_questions.py
(+103 files in other folders)
