[project]
name = "resume-generator-backend"
version = "3.0.0"
description = "AI-powered resume and cover letter generator with multi-agent pipeline"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",

    # AI Providers
    "google-genai>=1.51.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",

    # LangGraph Multi-Agent Pipeline
    "langgraph>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",

    # PDF Generation & Processing
    "PyMuPDF>=1.24.0",
    "reportlab>=4.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.14",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Evaluation
    "spacy>=3.7",
    "scikit-learn>=1.4",
    "rapidfuzz>=3.0.0",
    "rank-bm25>=0.2.2",

    # RAG Pipeline
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "firecrawl-py>=1.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",

    # Rate Limiting & Security
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-recording>=0.13.0",
    "vcrpy>=6.0",
    "httpx>=0.27",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "types-aiofiles>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "evaluation",
    "models",
    "services",
    "prompts",
    "templates",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "alembic/*",
    "venv/*",
    ".venv/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
